《Java并发编程实战》第11章笔记

--- a/src/main/java/com/learning/project/fzk/notes/并发知识讲解.md
+++ b/src/main/java/com/learning/project/fzk/notes/并发知识讲解.md
@@ -690,7 +690,7 @@ TODO 看源码，如何用Java实现信号量机制
 
 一种两方（Two-party）栅栏。用于两个工作线程之间交换数据的栅栏结构，我们不确定两个线程哪个先走完，所以第一个走完的线程会等待另一个，当都执行结束后，唤醒第一个，进行交换数据。
 
-## 5.3 设计一个本地缓存工具类
+## 5.3 本地缓存工具设计
 
 本节的目标是，设计一个线程安全的结果集缓存结构，其中存储K-V结构的数据。下面每一节都会在上一节的基础上修复一些问题，最终改进为一个优秀的本地缓存工具类。
 
@@ -1085,6 +1085,114 @@ JVM自带功能，死锁检测。如jdk中的jconsole工具可以用于检测死
 
 
 
+# 8. 性能与可伸缩性
+
+> 《Java并发编程实战》第11章
+
+## 8.1 对性能的思考
+
+通常评价一个程序的性能，可以分为两大类：运行速度，和处理能力。
+
+* 运行速度：表示程序的响应时间，即一批请求过来，每个请求需要耗费多久才能处理完成。通常在性能指标中使用tp99、tp999来表示99%或99.9%的请求的最慢处理时间；
+* 处理能力：表示程序的吞吐量，即在计算资源一定的情况下，能处理多少请求而不宕机。通常在性能指标中使用qps、tps来表示每秒处理查询、处理事务的请求量。
+
+我们为什么要使用多线程技术？毕竟，引入多线程后，程序复杂度提升，互斥锁的操作、线程的阻塞唤醒、创建和销毁，对于单线程来说都是额外的开销。如果对多线程使用不当，这些开销甚至会超过多线程所带来的性能提升，得不偿失。
+
+举个例子，对于一个最简单的增删改查的web应用，在用户量较少的情况下，可以把MVC（展示、逻辑、持久化）三层都放在一个应用中。这样，三层之间的数据传输几乎没有任何延迟，也不需要将计算过程分解到不同的抽象层次，因此能减少许多开销。
+
+然而这种单体应用很容易达到处理能力的极限。当用户量增多时，需要应用程序提供更高的qps，这对于单机的应用很难达到。因此，我们通常会接受在每个请求上执行更长时间（**降低响应性**）或消耗更多的计算资源，来换取**更高的处理能力**。比如，把单体服务拆分为微服务，这样会每个请求都增加了网络传输的消耗，但给整个程序带来了巨大的可扩展性。
+
+**对于高并发的程序来说，能处理多少用户量（可伸缩性、吞吐量、生产量），要比单个请求的响应时间（运行速度）更重要。**
+
+当进行程序优化时，经常会通过增加一种成本，来降低另一种开销。比如，增加网络传输成本来换取可伸缩性；增加缓存层来降低服务时间；降低代码可读性来换取更高效的算法等等。因此，在动手优化之前，一定要利用各种性能测试工具来保证，优化出来的性能，要大于为了优化而牺牲的成本。
+
+## 8.2 Amdahl定律
+
+参考资料：[阿姆达尔定律](https://www.cnblogs.com/zhangzefei/p/9775079.html) 
+
+Amdahl定律主要用于计算系统可以得到的最大期望改进。经常用于并行计算领域，用来预测一个系统的理论最大加速比。在性能调优问题领域，利用此定律有助于解决或缓解性能瓶颈问题。
+
+大多数并发程序都与种庄稼的过程有相似之处，他们都是由一系列的并行工作和串行工作组成的。如，程序要从共享的队列中获取任务，这是没法并行化的（想想阻塞队列中的take锁），就像庄稼的生长过程，增加再多的工人也不能提高庄稼的生长速度；而对于程序中的单个任务处理，可以被并行化，就像每一亩庄稼的收割一样，可以同时由多人完成。
+
+假设一个程序，需要串行执行的部分占比为 $F$ ，那么可以被多线程并行的部分就是 $1-F$ 。假设我们用 $N$ 台服务器来并行执行 $1-F$ 这一部分程序，那么能达到最高的加速比为：
+$$
+Speedup \leq \frac{1}{F+\frac{1-F}{N}}
+$$
+加速比的意思是，在指定 $N$ 台服务器的情况下，相比于单线程执行，能提高的效率。假如加速比是3，就是说多线程环境下只用 $\frac13$ 的时间就能完成单线程相同的工作。
+
+这个公式可以理解为：**加速比=单线程算法耗时 / 多线程算法耗时**。
+
+其中单线程算法耗时是 $F+(1-F)=1$，而多线程算法耗时，将 $1-F$ 的部分放在 $N$ 个服务器上并行执行，因此平均时间是 $\frac{1-F}{N}$ 。
+
+下图横轴是并发数（服务器数量），红线是在不断增大并发数时的加速比：
+
+![image.png](https://i.loli.net/2019/09/27/9G7rbEXP8KxIZCA.png)
+
+
+
+从公式和图中可以看出：
+
+* 当 $N$ 趋于无穷大时，最大加速比趋近于 $\frac1F$ ；
+* 随着线程数增大，加速比的增速变得越来越低；
+* 当线程数继续增大，甚至会导致由于线程频繁切换，在后面出现加速比下降的情况（图中没显示）；
+
+因此，要想提高服务的性能，仅仅堆机器是不够的，还要想办法降低串行执行的占比 $F$ 。
+
+## 8.3 优化串行部分
+
+### 8.3.1 哪些是串行部分？
+
+应用程序中可能存在多个必须串行执行的部分。降低程序中必须串行部分的占比，是性能优化的重要一步。
+
+* 线程池获取任务：线程池中使用到了阻塞队列，由于要保证线程安全，无法多线程同时从队列取任务。因此，线程池是并行执行任务，但获取任务时是一个必须串行的过程；
+* 线程池执行结果处理：提交到线程池中的所有任务，都一定会产生某种结果，比如计算结果放入共享内存中、计算结果入库、记录日志等。这些结果通常也是串行的部分。
+
+对于这些不得不串行执行的代码，它们都是通过锁来控制的。一个线程抢到锁才能执行，释放锁后才能把资源交给下一个线程。在并发程序中，对可伸缩性的最主要威胁就是独占方式的资源锁。如何优化这把锁呢？优化时可以有几种思路：
+
+* 减少锁的持有时间；
+* 降低锁的请求频率；
+* 使用带有协调机制的独占锁，来获得更高的并发性。
+
+下面几节讲具体的优化策略。
+
+### 8.3.2 减少锁的竞争
+
+**缩小锁的范围**
+
+将与锁无关的代码移出同步代码块，尤其是一些耗时的、可能阻塞的操作；根据Amdahl定律，这种方法降低了串行代码的占比 $F$ 。
+
+**减小锁的粒度**
+
+即锁的拆分。如果一个锁需要保护多个相互独立的状态变量，那么可以将这个锁分解为多个锁，每个锁只保护一个变量。这样，将锁分解以后，每个新的细粒度锁上的访问量将比最初的访问量更少，从而降低每个锁被请求的频率；
+
+书中将其分为两类，锁分解和锁分段。区别是：
+
+* 锁分解是从业务上拆分，比如拆分用户锁和订单锁（当然这要详细分析业务，确保两处不需要保证原子性操作）；
+* 锁分段是从技术上拆分，比如ConcurrentHashMap把整个数据集拆分为16把锁。而jdk1.8中的ConcurrentHashMap拆分的更细，解除了16把锁的限制，数组中的每一个元素都单独成锁。
+
+### 8.3.3 避免热点域
+
+当每个操作都请求多个变量时，锁的粒度很难降低。这是性能与可伸缩性之间相互制衡的一个方面，一些常见的优化措施，例如将一些反复计算的结果缓存起来，都会引入一些热点域，而这些热点域往往会限制可伸缩性。
+
+个人理解，热点域产生的问题来源于：业务上需要这些热点域与各种操作保持原子性，或者叫数据的强一致性。试想，好不容易把一把锁拆成了多把锁，可以多线程并行执行了，结果出来一个热点域，每个线程执行前还要抢这个热点域的锁。这就让锁拆分的优化变得无效。
+
+典型的例子是ConcurrentHashMap中的元素数量size。若多线程同时操作时都要抢size变量的互斥锁，就使得分段锁的设计变得无效。为了避免这个问题，ConcurrentHashMap中的size会遍历每个分段，并对其中的元素数量相加，而不是维护一个全局计数。
+
+### 8.3.4 放弃独占锁
+
+另一种降低竞争锁的影响的技术就是放弃使用独占锁，而是使用一种友好并发的方式来管理共享状态。
+
+* 读写锁：jdk中的实现是 `ReadWriteLock` ；TODO 读源码
+* 原子变量：jdk中实现了利用CAS操作来保证原子性操作的数值包装类，比如 `AtomicInteger` 等。它们提供了更细粒度的锁，因此伸缩性更高；
+* 线程安全的类：jdk对于很多数据结构，都提供了线程安全的版本，且它们并不是简单粗暴的上锁，而以更细粒度的锁来保证线程安全性。如：ConcurrentLinkedQueue非阻塞队列。TODO 读源码
+
+### 8.3.5 向对象池说“不”
+
+随着JVM不断迭代， 对象分配和GC的操作变得越来越快，因此没有必要为了节省对象分配（即new一个对象）的时间，而将对象缓存在池子中，反而这种操作会降低性能。
+
+在并发程序中，当在线程内分配新的对象时，JVM会利用逃逸分析检测出该对象不会逃逸出该线程，因此通常会使用线程本地内存（CPU缓存或栈内存上分配），不需要在堆内存上进行同步。相反，如果使用了对象池，那就需要通过某种同步机制来协调多线程对池子的访问，从而可能使某个线程被阻塞。而这种阻塞的开销是内存分配操作开销的数百倍。
+
+所以，不要使用对象池。
 
 
 
@@ -1106,26 +1214,7 @@ JVM自带功能，死锁检测。如jdk中的jconsole工具可以用于检测死
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-# 8. 一些还没有想好应该放在哪里的笔记
+# 9. 一些还没有想好应该放在哪里的笔记
 
 **synchronized不要修饰web服务中的方法**
 
@@ -1183,3 +1272,9 @@ JVM自带功能，死锁检测。如jdk中的jconsole工具可以用于检测死
   - 8个先行发生原则
   - volatile如何保证可见性、有序性？
   - synchronized如何保证原子性、可见性、有序性？
+
+
+
+## 二、第二期分享大纲
+
+TODO
