调整目录结构

--- a/src/main/java/com/learning/project/fzk/notes/并发知识讲解.md
+++ b/src/main/java/com/learning/project/fzk/notes/并发知识讲解.md
@@ -1293,7 +1293,7 @@ $$
 
 以阻塞队列为例，需要测试：当队列为空时，take操作需要被阻塞；当队列已满时，put操作需要被阻塞。
 
-现在我们知道了想要达到的阻塞效果，那么测试程序应该如何编写？可以采用这样的思路：不在主线程中阻塞，而是创建一个子线程去阻塞，并捕获其中断异常（InterruptedException）。主线程可同时测试子线程的阻塞、响应中断。如下，详细代码见：com.learning.project.fzk.blockingQueue.test.TestBlock。
+现在我们知道了想要达到的阻塞效果，那么测试程序应该如何编写？可以采用这样的思路：不在主线程中阻塞，而是创建一个子线程去阻塞，并捕获其中断异常（InterruptedException）。主线程可同时测试子线程的阻塞、响应中断。如下，详细代码见：com.learning.project.fzk.multiThread.blockingQueue.test.TestBlock。
 
 ```java
 MyLinkedBlockingQueue<Integer> queue = new MyLinkedBlockingQueue<>(10);
@@ -1324,7 +1324,7 @@ Assert.assertFalse(thread.isAlive());
 
 以阻塞队列位列，测试线程安全的思路是：多线程同时入队、出队，最终验证结果。可以使用jdk自带的线程池来模拟并发，如：对于一个容量为10的阻塞队列，使用10个线程，同时执行1000000次入队、出队操作。每次入队的元素是一个随机数，且每次入队出队，都将插入/移出的随机数累加。若最终多线程插入/移出的累加数字相等，则说明没有产生线程安全问题。
 
-代码见：com.learning.project.fzk.blockingQueue.test.TestThreadSave。
+代码见：com.learning.project.fzk.multiThread.blockingQueue.test.TestThreadSave。
 
 **如何迫使多线程同时执行？**
 
