--- a/src/main/java/com/learning/project/fzk/notes/阻塞队列讲解.md
+++ b/src/main/java/com/learning/project/fzk/notes/阻塞队列讲解.md
@@ -200,4 +200,4 @@ Offer和take操作流程如下：
 
 对于从运行中转为结束状态，也一样。
 
-代码见：com.learning.project.fzk.blockingQueue.use.TestDelayQueue#testTask
+代码见：com.learning.project.fzk.multiThread.blockingQueue.use.TestDelayQueue#testTask
