单例本地缓存工具类设计

--- a/src/main/java/com/learning/project/fzk/notes/并发知识讲解.md
+++ b/src/main/java/com/learning/project/fzk/notes/并发知识讲解.md
@@ -808,24 +808,85 @@ public V getResult(K key) {
 
    解决方法是，若计算失败，将map中的Future占位符移除，并重新开始新一次的计算。
 
-最终版本如下：
+改进版本如下：
 
 ```java
-private ConcurrentHashMap<K, Future<V>> map = new ConcurrentHashMap();
+private final ConcurrentHashMap<K, Future<V>> map = new ConcurrentHashMap();
+private final Computable<K, V> computable;
 
 public V getResult(K key) {
-    while(true) { // 加一层循环，处理计算失败的情况
+    while (true) { // 加一层循环，处理计算失败的情况
         Future<V> future = map.get(key);
-        if(future == null) {
-            FutureTask<V> task = new FutureTask<V>(() -> calculate(key));
-            map.putIfAbsent(key, task);
-            task.run();
+        // 未命中，第一次检查
+        if (future == null) {
+            FutureTask<V> futureTask = new FutureTask<>(() -> computable.compute(key));
+            // 第二次原子性检查，并记录是否put成功：
+            // 若返回值为空，说明成功抢到锁并put进去；若返回值非空，说明已经有其他线程抢先put进去了
+            future = map.putIfAbsent(key, futureTask);
+            if (future == null) { // 只有是当前线程put成功，才开始计算，否则等着其他线程算完就行了
+                future = futureTask;
+                futureTask.run(); // 开始计算
+            }
         }
+        // 此时，这里的future可能是当前线程put进去的，也可能是当前线程put失败，返回了其他线程的。
+        // 从中拿到结果（阻塞一会/立即拿到）后返回即可
         try {
             return future.get();
-        } catch (Exception e) {
-            map.remove(key, future); // 只有当value==future时，才会移除
+        } catch (Throwable e) {
+            // 若compute抛出异常，移出future重新计算
+            map.remove(key, future);
         }
+    }
+}
+```
+
+源代码见：com.learning.project.fzk.multiThread.cache.Cache2
+
+测试代码见：com.learning.project.fzk.multiThread.cache.TestCache
+
+注意：
+
+1. 使用了双重检查，第一次检查确保Future占位符为空才创建新的Future，不会每个线程都创建一个，但这与后面的put方法组合后，是线程不安全的；因此需要第二次检查，这次检查是原子性的，保证只有一个线程能执行put方法成功。跟双重检查加锁的单例模式思路一样，这里也通过双重检查加锁的方式保证了运算过程和结果的单例；
+2. map结构的 `put` 、 `putIfAbsent` 、 `computeIfAbsent` 等方法，返回值都是方法执行之前，key对应的value值。也就是说，如果map本身不包含一个key，这些方法返回的就是null。
+
+运行流程：
+
+* 100个线程同时获取同一个key的结果；
+* 10个线程第一次判断通过，于是创建了10个Future占位符；剩下90个都在future.get()方法中阻塞了；
+* 10个线程同时对自己的Future占位符执行putIfAbsent操作；
+* 只有1个线程执行成功，并返回null，于是自己执行；
+* 其他9个线程执行失败，并返回上面成功的线程创建的Future占位符，同样在future.get()方法中阻塞；
+* 若唯一成功的Future执行失败，则阻塞中的99个线程都会捕获异常，并进行重试；
+* 直到某一次的Future执行成功，则唤醒99个线程获取结果。
+
+### 5.3.4 computeIfAbsent
+
+另外，jdk1.8版本后，ConcurrentHashMap中提供了原子性的“若不存在则开始计算”的操作： `computeIfAbsent(K key, Function<? super K, ? extends V> mappingFunction)` ，传入一个计算的函数，若key不存在，则调用计算函数进行计算，并放入map结构中。由于整个操作是原子性的，因此不必担心多线程同时执行计算函数：只有第一个线程会执行，其他的都会暂时阻塞。
+
+与上节putIfAbsent的唯一区别是，putIfAbsent的入参 `FutureTask#Callable#call` 方法，支持抛出异常；而computeIfAbsent的入参Function的函数apply，不支持抛出异常，因此循环计算的逻辑要移到map里面去。
+
+因此，可以使用 `computeIfAbsent` 函数来替代上面的 `Future` ，如下：
+
+```java
+private ConcurrentHashMap<K, V> map = new ConcurrentHashMap();
+
+public V getResult(K key) {
+    while (true) { // 加一层循环，处理计算失败的情况
+        V v = map.get(key);
+        // 未命中，第一次检查
+        if (v == null) {
+            // 第二次原子性检查
+            v = map.computeIfAbsent(key, k -> {
+                while (true) { // 处理计算失败的情况
+                    try {
+                        return computable.compute(key);
+                    } catch (Exception e) {
+                        e.printStackTrace();
+                    }
+                }
+            });
+        }
+        return v;
     }
 }
 ```
@@ -1046,15 +1107,17 @@ transfer(Account fromAccount, Account toAccount, long amount) {
 
 #### 7.2.2.2 使用轮询锁
 
+> 《Java并发编程实战》13.1.1节
+
 另一种解决方法是，可以按照相反的顺序获取锁，但仅仅尝试一次。若一次没有获取到，则当前线程随机休眠一段时间后，再次尝试。这既保证了不会无限阻塞造成死锁，同时，随机休眠机制也保证了不会因两线程同时谦让造成活锁。如下：
 
 ```java
 // 入参：操作人、收款人、转款金额
 transfer(Account fromAccount, Account toAccount, long amount) {
     while(true) { // 轮询锁，避免死锁
-        fromAccount.getLock().lock(); // 每个账户内维护自己的锁对象
+        fromAccount.getLock().tryLock(); // 每个账户内维护自己的锁对象
         try {
-            toAccount.getLock().lock();
+            toAccount.getLock().tryLock();
             try {
                 // 转账逻辑...
             } finally {
@@ -1293,7 +1356,7 @@ $$
 
 以阻塞队列为例，需要测试：当队列为空时，take操作需要被阻塞；当队列已满时，put操作需要被阻塞。
 
-现在我们知道了想要达到的阻塞效果，那么测试程序应该如何编写？可以采用这样的思路：不在主线程中阻塞，而是创建一个子线程去阻塞，并捕获其中断异常（InterruptedException）。主线程可同时测试子线程的阻塞、响应中断。如下，详细代码见：com.learning.project.fzk.multiThread.blockingQueue.test.TestBlock。
+现在我们知道了想要达到的阻塞效果，那么测试程序应该如何编写？可以采用这样的思路：不在主线程中阻塞，而是创建一个子线程去阻塞，并捕获其中断异常（InterruptedException）。主线程可同时测试子线程的阻塞、响应中断。如下，详细代码见：com.learning.project.fzk.blockingQueue.test.TestBlock。
 
 ```java
 MyLinkedBlockingQueue<Integer> queue = new MyLinkedBlockingQueue<>(10);
@@ -1324,7 +1387,7 @@ Assert.assertFalse(thread.isAlive());
 
 以阻塞队列位列，测试线程安全的思路是：多线程同时入队、出队，最终验证结果。可以使用jdk自带的线程池来模拟并发，如：对于一个容量为10的阻塞队列，使用10个线程，同时执行1000000次入队、出队操作。每次入队的元素是一个随机数，且每次入队出队，都将插入/移出的随机数累加。若最终多线程插入/移出的累加数字相等，则说明没有产生线程安全问题。
 
-代码见：com.learning.project.fzk.multiThread.blockingQueue.test.TestThreadSave。
+代码见：com.learning.project.fzk.blockingQueue.test.TestThreadSave。
 
 **如何迫使多线程同时执行？**
 
@@ -1438,35 +1501,11 @@ TODO
 
 
 
-
-
-
-
-
-
-
-
-# 11. 一些还没有想好应该放在哪里的笔记
-
-**synchronized不要修饰web服务中的方法**
-
-当synchronized修饰方法时，锁住的是这个实例对象。而对于基于spring的web服务而言，默认都是单例的bean，一旦锁住了这个对象，就说明该方法无法并发服务于多个用户，只能服务完一个用户，这个bean被解锁后，下一个用户的请求才能获取到这个bean，这对web服务的体验带来毁灭性的打击。
-
-其次，对于多核服务器，锁住了一个对象，该对象就无法被其他CPU使用了，造成一人干活，多人围观的情况。同样会降低程序的并发性。
-
-
-
-**为什么阻塞和唤醒操作一定要在拿到锁（synchronized/ReentrantLock）后才能执行？**
-
-答：多线程环境下，无法保证notify一定先行发生于另一个线程的wait。试想这样一种情况：线程A第0秒执行了wait，需要耗费2秒；线程B在第1秒执行了同一个锁对象的notify，但发现并没有线程处于wait状态。于是，等线程A的wait执行完后，它将永远阻塞。
-
-这种设计是为了通过锁的方式，保证notify一定先行发生于其他线程的wait，保证notify和wait都是原子操作。
-
-
-
 # 附录
 
-## 一、2019.9.15期分享大纲
+## 一、分享大纲
+
+### （1）2019.9.15期
 
 - 线程安全的五个级别
   - Java中对应的哪些级别，分别举例
@@ -1491,8 +1530,6 @@ TODO
   - 轻量级锁；
   - 偏向锁；
 
-
-
 - CPU的并发问题
   - 【插播】CPU的l1、l2缓存，进程本地内存；
   - 缓存一致性问题，与缓存一致性协议；
@@ -1507,7 +1544,7 @@ TODO
 
 
 
-## 二、第二期分享大纲
+### （2）2019.10.13期
 
 * 如何设计一个线程安全的类
   * 变量约束条件分析
@@ -1519,6 +1556,18 @@ TODO
   * 避免死锁：定时获取锁；
   * 线程饥饿
   * 活锁
+
+
+
+### （3）2019.10.20期
+
+* 遗留问题
+  * 5.3.3 future与task变量名问题
+    * 双重检查的说明
+  * 5.3.4 改进本地缓存结构：使用 `computeIfAbsent` 
+* 7.2.2.2 轮询锁，lock改为tryLock
+  * 7.2.3 
+  
 * 性能、可伸缩性
   * Amdahl定律
   * 根据Amdahl定律进行优化
@@ -1531,12 +1580,27 @@ TODO
   * 阻塞测试（唤醒测试）
   * 线程安全测试
   * 响应性测试
-* 显示锁
-  * ReentrantLock（1.3.1.3节）
-  * ReadWriteLock（5.2.2.7节）
 * 构建自定义的同步工具
   * 阻塞队列的过早唤醒问题
   * AQS简介
+
+
+
+## 二、一些还没有想好应该放在哪里的笔记
+
+**synchronized不要修饰web服务中的方法**
+
+当synchronized修饰方法时，锁住的是这个实例对象。而对于基于spring的web服务而言，默认都是单例的bean，一旦锁住了这个对象，就说明该方法无法并发服务于多个用户，只能服务完一个用户，这个bean被解锁后，下一个用户的请求才能获取到这个bean，这对web服务的体验带来毁灭性的打击。
+
+其次，对于多核服务器，锁住了一个对象，该对象就无法被其他CPU使用了，造成一人干活，多人围观的情况。同样会降低程序的并发性。
+
+
+
+**为什么阻塞和唤醒操作一定要在拿到锁（synchronized/ReentrantLock）后才能执行？**
+
+答：多线程环境下，无法保证notify一定先行发生于另一个线程的wait。试想这样一种情况：线程A第0秒执行了wait，需要耗费2秒；线程B在第1秒执行了同一个锁对象的notify，但发现并没有线程处于wait状态。于是，等线程A的wait执行完后，它将永远阻塞。
+
+这种设计是为了通过锁的方式，保证notify一定先行发生于其他线程的wait，保证notify和wait都是原子操作。
 
 
 
