死锁场景修改

--- a/src/main/java/com/learning/project/fzk/notes/并发知识讲解.md
+++ b/src/main/java/com/learning/project/fzk/notes/并发知识讲解.md
@@ -1137,16 +1137,14 @@ transfer(Account fromAccount, Account toAccount, long amount) {
 
 ```java
 class A {
-    B b = new B();
-    public synchronized doSomething() {
-        b.doSomething();
+    public synchronized void doSomething(B b) {
+        b.doSomething(this);
     }
 }
 
 class B {
-    A a = new A();
-    public synchronized doSomething() {
-        a.doSomething();
+    public synchronized void doSomething(A a) {
+        a.doSomething(this);
     }
 }
 ```
