《Java并发编程实战》16章笔记

--- a/src/main/java/com/learning/project/fzk/notes/并发知识讲解.md
+++ b/src/main/java/com/learning/project/fzk/notes/并发知识讲解.md
@@ -1421,7 +1421,7 @@ Assert.assertFalse(thread.isAlive());
 
 # 10. 同步工具类的实现
 
-> 《Java并发编程实战》14、15章
+> 《Java并发编程实战》14、15、16章
 
 java.util.concurrent包中提供了很多并发相关的工具类，比如下面列出的编写并发程序中常用的工具类：ReentrantLock、ReentrantReadWriteLock、Semaphore、CountDownLatch、SynchronousQueue、FutureTask，它们底层都是基于内置条件队列、显式Condition对象、AbstractQueuedSynchronizer来实现的。
 
@@ -1634,29 +1634,125 @@ TODO 代码只写了入队操作，自己写完出队操作
 
 相关论文：[Simple, Fast, and Practical Non-Blocking and Blocking Concurrent Queue Algorithms](https://www.cs.rochester.edu/~scott/papers/1996_PODC_queues.pdf) 
 
+## 10.4 再谈单例模式
 
+> 《Java并发编程实战》16.2节
 
+单例模式，书中将其称为“发布一个对象”。有多种写法，在我们掌握了并发相关的知识后，再来看下每种发布方式的优缺点，如：线程安全问题、重排序问题、重复构造问题等。
 
+### 10.4.1 线程不安全的单例
 
+下面是一段延迟加载（懒汉式）的单例模式。
 
+```java
+private static Object instance;
 
+public static Object getInstance() {
+    if (instance == null) {
+        instance = createInstance();
+    }
+    return instance;
+}
+```
 
+**重复构造的问题**
 
+一个比较明显的问题是，若 `createInstance()` 方法比较耗时，多线程会同时判断 `instance` 字段为空，会重复调用创建方法，造成CPU浪费。解决方式在5.3节中进行过讨论，可以使用一个Future占位符来告诉其他线程，这个单例对象正在进行构造，无需重复调用。
 
+**重排序引发的线程安全问题**
 
+然而除了这个问题，在考虑Java编译器的乱序优化时，仍然有另外一个问题。假设线程A先调用，那么在执行 `instance = createInstance()` 这个符合操作时，正常执行流程是：
 
+```
+1.在堆中分配对象内存
+2.初始化实例
+3.将引用指向这块内存
+```
 
+由于在完成第一步后，对象的大小和地址都已经确定，且2、3之间不存在相互依赖关系，因此2、3之间存在重排序的可能。所以上面和下面两种执行顺序都有可能出现：
 
+```
+1.在堆中分配对象内存
+2.将引用指向这块内存
+3.初始化实例
+```
 
+因此，若线程A按照此顺序执行，当第三步还没有初始化完成时，线程B会判断引用非空，则会拿到这个部分构造的实例，可能导致线程B中的数据异常。产生问题的场景如下：
 
+|         线程A          |          线程B           |
+| :--------------------: | :----------------------: |
+| instance为空，准备构造 |                          |
+|   在堆中分配对象内存   |                          |
+|   将引用指向这块内存   |                          |
+|     初始化实例开始     |                          |
+|          ...           |       instance非空       |
+|          ...           |    直接返回此内存地址    |
+|          ...           | **使用了部分构造的实例** |
+|     初始化实例结束     |                          |
 
+### 10.4.2 使用互斥锁的单例
 
+仍然是一段懒加载的单例模式，只是方法上使用了互斥锁，保证了单例对象只会被初始化一次，且synchronized的特性也解决了上面提到的重排序问题。如下：
 
+```java
+private static Object instance;
 
+public synchronized static Object getInstance() {
+    if (instance == null) {
+        instance = createInstance();
+    }
+    return instance;
+}
+```
 
+这种方法适用于线程竞争不激烈的情况。当同时到来的线程很多时，即使单例对象已经构造结束，且单例对象可以同时被多线程访问，但由于互斥锁的存在，多线程也要串行地拿到单例对象。
 
+### 10.4.3 饿汉式单例
 
+下面是一段常见的饿汉式单例模式，会在类加载的过程中把单例对象创建出来。由于单例对象是在类加载的过程中进行的，因此它的有序性是由类加载机制保障的，不会出现上面提到的问题。
 
+也就是说，饿汉式单例天然是线程安全的单例模式，即使没有写出任何线程同步相关的代码。
+
+```java
+private static Object instance = createInstance();
+
+public static Object getInstance() {
+    return instance;
+}
+```
+
+### 10.4.4 静态内部类的单例
+
+使用了一个专门的静态类来初始化单例对象。这样既保证了懒加载（直到调用 `getInstance()` 方法才会加载静态内部类），同时，JVM的类加载机制也会保证单例对象构造的有序性，不会因为重排序导致其他线程拿到不完整的单例对象。
+
+```java
+private static class SingletonHolder {
+    public static Object instance = createInstance();
+}
+
+public static Object getInstance() {
+    return SingletonHolder.instance;
+}
+```
+
+### 10.4.5 双重检查加锁单例
+
+下面是一段双重检查加锁的单例模式，其中的volatile保证了对单例对象读写操作的有序性。若去掉volatile，仍然会发生10.4.1节中提到的，其他线程拿到未完整构造的单例对象的问题。
+
+```java
+private static volatile Object instance;
+
+public static Object getInstance() {
+    if (instance == null) {
+        synchronized(Singleton.class) {
+            if (instance == null) {
+                instance = createInstance();
+            }
+        }
+    }
+    return instance;
+}
+```
 
 
 
@@ -1726,7 +1822,8 @@ TODO 代码只写了入队操作，自己写完出队操作
   * 5.3.4 改进本地缓存结构：使用 `computeIfAbsent` 
   * 7.2.2.2 轮询锁，lock改为tryLock
   
-  * 7.2.3 
+  * 7.2.3 死锁场景：改为传入对象
+  
 * 性能、可伸缩性
   * Amdahl定律
   * 根据Amdahl定律进行优化
@@ -1734,14 +1831,18 @@ TODO 代码只写了入队操作，自己写完出队操作
     * 减少锁竞争
     * 避免热点域
     * 放弃独占锁
+  
 * 并发程序的测试
   * 单元测试
   * 阻塞测试（唤醒测试）
   * 线程安全测试
   * 响应性测试
+  
 * 构建自定义的同步工具
-  * 阻塞队列的过早唤醒问题
-  * AQS简介
+  
+  * AQS、CAS
+  
+  * 基于AQS和CAS构建的同步工具类
 
 
 
