--- a/src/main/java/com/learning/project/fzk/notes/并发知识讲解.md
+++ b/src/main/java/com/learning/project/fzk/notes/并发知识讲解.md
@@ -1552,7 +1552,7 @@ volatile int value;
 public int incrementAndGet() {
     int v;
     do {
-        v = value.get();
+        v = value;
     } while(!compareAndSwap(value, v, v + 1));
     return v + 1;
 }
